[package]
name = "rt_impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
png = "0.17.13"
spirv-std = "0.9.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
rayon = "1.10.0"

[dev-dependencies]
itertools = "0.13.0"

[profile.dev] # who needs safety
overflow-checks = false
